integration_tests/codegen_fail/fail/interface/missing_field.stderr
error[E0080]: evaluation of constant value failed
 --> fail/interface/missing_field.rs:9:1
  |
9 | #[graphql_interface(for = ObjA)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Failed to implement interface `Character` on `ObjA`: Field `id` isn't implemented on `ObjA`.', $DIR/fail/interface/missing_field.rs:9:1
  |
  = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)
